made few changes to ui

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Add Item</h1>
         <input type="text" id="itemInput" placeholder="Enter item name">
         <input type="text" id="imageInput" placeholder="Enter image URL (optional)">
+        <input type="text" id="detailsInput" placeholder="Enter item details (optional)">
         <button id="addItem">Add Item</button>
     </div>
     <div id="itemGrid" class="item-grid"></div>
