--- a/index.html
+++ b/index.html
@@ -6,17 +6,31 @@
     <title>Charecters</title>
     <style>
         body {
-            font-family: Trattatello, fantasy;
-            background-color: #f0f2f5;
+            font-family: "Lucida Console", "Courier New", monospace;
+            background-color: black;
+            color: white;
             display: flex;
             flex-direction: column;
             align-items: center;
             height: 100vh;
             margin: 0;
         }
+
+.neonText {
+  color: #fff;
+  text-shadow:
+      0 0 7px #fff,
+      0 0 10px #fff,
+      0 0 21px #fff,
+      0 0 42px #0fa,
+      0 0 82px #0fa,
+      0 0 92px #0fa,
+      0 0 102px #0fa,
+      0 0 151px #0fa;
+}
         h1 {
             margin-top: 20px;
-            color: #333;
+            
         }
         .item-grid {
             display: flex;
@@ -55,7 +69,18 @@
             right: 0;
             bottom: 0;
             background: rgba(0, 0, 0, 0.7);
-            color: white;
+
+  color: #fff;
+  text-shadow:
+      0 0 7px #fff,
+      0 0 10px #fff,
+      0 0 21px #fff,
+      0 0 42px #0fa,
+      0 0 82px #0fa,
+      0 0 92px #0fa,
+      0 0 102px #0fa,
+      0 0 151px #0fa;
+
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -80,7 +105,7 @@
     </style>
 </head>
 <body>
-    <h1>Charecters</h1>
+    <h1 class="neonText">Charecters</h1>
     <div id="itemGrid" class="item-grid"></div>
 
     <script type="module">
