connected two html files and used neon font

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 }
         h1 {
             margin-top: 20px;
-            
         }
         .item-grid {
             display: flex;
@@ -106,6 +105,7 @@
 </head>
 <body>
     <h1 class="neonText">Charecters</h1>
+    <br><br><br> <a href="enter.html">here</a>
     <div id="itemGrid" class="item-grid"></div>
 
     <script type="module">
