Implemented host authorisation for host to add and delete data , users can have read-only permission

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </head>
 <body>
     <h1 class="neonText">Charecters</h1>
-    <br><br><br> <a href="enter.html">here</a>
+    <br><br><br> <a href="authorise.html">here</a>
     <div id="itemGrid" class="item-grid"></div>
 
     <script type="module">
