--- a/index.html
+++ b/index.html
@@ -3,145 +3,155 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charecters</title>
+    <title>Blog</title>
     <style>
         body {
             font-family: "Lucida Console", "Courier New", monospace;
-            background-color: black;
-            color: white;
             display: flex;
             flex-direction: column;
             align-items: center;
             height: 100vh;
             margin: 0;
+            padding: 20px;
+            transition: background-color 0.3s, color 0.3s;
         }
 
-.neonText {
-  color: #fff;
-  text-shadow:
-      0 0 7px #fff,
-      0 0 10px #fff,
-      0 0 21px #fff,
-      0 0 42px #0fa,
-      0 0 82px #0fa,
-      0 0 92px #0fa,
-      0 0 102px #0fa,
-      0 0 151px #0fa;
-}
-        h1 {
+        /* Light Mode Styles */
+        .light-mode {
+            background-color: #f0f8ff; /* Light background color */
+            color: #333; /* Dark text color */
+        }
+
+        /* Dark Mode Styles */
+        .dark-mode {
+            background-color: black; /* Dark background color */
+            color: white; /* Light text color */
+        }
+
+        .neonText {
+            color: #0056b3; /* Soft blue color */
+            text-shadow:
+                0 0 7px #0056b3,
+                0 0 10px #0056b3,
+                0 0 21px #0056b3,
+                0 0 42px #2a7bff,
+                0 0 82px #2a7bff,
+                0 0 92px #2a7bff,
+                0 0 102px #2a7bff,
+                0 0 151px #2a7bff;
+        }
+
+        .item-list {
+            width: 100%;
+            max-width: 600px;
             margin-top: 20px;
         }
-        .item-grid {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin: 20px;
-            justify-content: center;
-        }
+
         .item-card {
-            position: relative;
-            width: 300px;
-            height: 300px;
-            overflow: hidden;
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
-            transition: height 0.5s ease, width 0.5s ease;
-        }
-
-.item-card.active {
-    width: 350px;
-    height: 350px;
-}
-         
-
-        .item-card img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: opacity 0.3s ease;
-        }
-        .item-card .item-info {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.7);
-
-  color: #fff;
-  text-shadow:
-      0 0 7px #fff,
-      0 0 10px #fff,
-      0 0 21px #fff,
-      0 0 42px #0fa,
-      0 0 82px #0fa,
-      0 0 92px #0fa,
-      0 0 102px #0fa,
-      0 0 151px #0fa;
-
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
             padding: 10px;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            text-align: center;
+            margin: 5px 0;
+            cursor: pointer;
+            transition: background 0.3s, transform 0.3s, box-shadow 0.3s;
         }
-        .item-card.active .item-info {
-            opacity: 1;
 
+        /* Light Mode Card */
+        .light-mode .item-card {
+            background: rgba(255, 255, 255, 0.9);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
-        .item-card .item-info .item-name {
-            font-size: 16px;
-            font-weight: bold;
+
+        /* Dark Mode Card */
+        .dark-mode .item-card {
+            background: rgba(255, 255, 255, 0.1);
         }
-        .item-card .item-info .item-details {
-            font-size: 14px;
+
+        .item-card:hover {
+            transform: scale(1.02);
+        }
+
+        .item-card.active {
+            background: rgba(220, 220, 220, 0.8); /* Active state in light mode */
+        }
+
+        .dark-mode .item-card.active {
+            background: rgba(255, 255, 255, 0.3); /* Active state in dark mode */
+        }
+
+        .item-details {
             margin-top: 10px;
+            padding: 0;
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.5s ease, padding 0.5s ease, margin 0.5s ease;
+        }
+
+        .item-card.active .item-details {
+            padding: 10px;
+            margin: 10px 0;
+            max-height: 20000px;
+        }
+
+        .item-image {
+            width: 100%;
+            margin-top: 10px;
+            border-radius: 5px;
+            opacity: 0;
+            transition: opacity 0.5s ease;
+            display: none;
+        }
+
+        .item-card.active .item-image {
+            display: block;
+            opacity: 1;
+        }
+
+        .toggle-button {
+            margin-bottom: 20px;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
     </style>
 </head>
-<body>
-    <h1 class="neonText">Charecters</h1>
-    <br><br><br> <a href="authorise.html">here</a>
-    <div id="itemGrid" class="item-grid"></div>
+<body class="light-mode">
+    <button class="toggle-button" id="toggleButton">Switch to Dark Mode</button>
+    <h1 class="neonText">B L O G</h1>
+    <div id="itemList" class="item-list"></div>
 
     <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
-        import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js";
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js";
+        import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-database.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-analytics.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyC2SQ1nSwkGbli1EClWffp84YJrVI7KxZE",
-            authDomain: "dynamic-blog-c41a0.firebaseapp.com",
-            databaseURL: "https://dynamic-blog-c41a0-default-rtdb.firebaseio.com",
-            projectId: "dynamic-blog-c41a0",
-            storageBucket: "dynamic-blog-c41a0.appspot.com",
-            messagingSenderId: "977944393868",
-            appId: "1:977944393868:web:fc669305460f925f99a3a9",
-            measurementId: "G-9FNKR9DHRZ"
+            apiKey: "AIzaSyC6CfsdPlIhTlivJmezWKbjleuhIfdfJKg",
+            authDomain: "dynamic-blog-intern.firebaseapp.com",
+            databaseURL: "https://dynamic-blog-intern-default-rtdb.asia-southeast1.firebasedatabase.app/",
+            projectId: "dynamic-blog-intern",
+            storageBucket: "dynamic-blog-intern.appspot.com",
+            messagingSenderId: "427652086125",
+            appId: "1:427652086125:web:bd814d0ef3e5afc0e3c264",
+            measurementId: "G-1P33X5BTM6"
         };
 
+        // Initialize Firebase
         const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
         const database = getDatabase(app);
 
-        const itemGrid = document.getElementById('itemGrid');
+        const itemList = document.getElementById('itemList');
 
+        // Fetch items from the database
         onValue(ref(database, 'items'), (snapshot) => {
-            itemGrid.innerHTML = '';
+            itemList.innerHTML = '';
             snapshot.forEach((childSnapshot) => {
                 const data = childSnapshot.val();
                 const itemCard = document.createElement('div');
                 itemCard.className = 'item-card';
 
-                const img = document.createElement('img');
-                img.src = data.image_url;
-                img.alt = "Item Image";
-
-                const itemInfo = document.createElement('div');
-                itemInfo.className = 'item-info';
-                
                 const itemName = document.createElement('div');
                 itemName.className = 'item-name';
                 itemName.textContent = data.item;
@@ -150,18 +160,34 @@
                 itemDetailsDiv.className = 'item-details';
                 itemDetailsDiv.textContent = data.details;
 
-                itemInfo.appendChild(itemName);
-                itemInfo.appendChild(itemDetailsDiv);
+                const img = document.createElement('img');
+                img.className = 'item-image';
+                img.src = data.image_url;
+                img.alt = "Item Image";
 
+                itemCard.appendChild(itemName);
+                itemCard.appendChild(itemDetailsDiv);
                 itemCard.appendChild(img);
-                itemCard.appendChild(itemInfo);
 
                 itemCard.addEventListener('click', function() {
                     itemCard.classList.toggle('active');
                 });
 
-                itemGrid.appendChild(itemCard);
+                itemList.appendChild(itemCard);
             });
+        });
+
+        // Toggle between light and dark mode
+        const toggleButton = document.getElementById('toggleButton');
+        toggleButton.addEventListener('click', () => {
+            document.body.classList.toggle('dark-mode');
+            document.body.classList.toggle('light-mode');
+
+            if (document.body.classList.contains('dark-mode')) {
+                toggleButton.textContent = "Switch to Light Mode";
+            } else {
+                toggleButton.textContent = "Switch to Dark Mode";
+            }
         });
     </script>
 </body>
