--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
 </head>
 <body class="light-mode">
     <button class="toggle-button" id="toggleButton">Switch to Dark Mode</button>
-    <h1 class="neonText">B L O G</h1>
+    <h1 class="neonText">B L O G</h1> 
+    <p><a href="authorise.html"> Host? </a></p>
     <div id="itemList" class="item-list"></div>
 
     <script type="module">
