--- a/authorise.html
+++ b/authorise.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1> Enter details </h1>
+<h1> Are you Host ?? Prove then ! </h1>
 
   <div class="form-container">
         <form id="loginForm" action="enter.html" method="GET">
